# extensible-ast-poc

./: LICENSE  README.md  extensible-ast-poc.cabal  stack.yaml
src/: AST.hs
src/AST/: Alg.hs  Core.hs  Eval.hs  LambdaCalc.hs  Primitives.hs
src/AST/Alg/: Eval.hs  Simple.hs
test/: Spec.hs
