name:                extensible-ast-poc
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/jacoby6000/extensible-ast-poc#readme
license:             BSD3
license-file:        LICENSE
author:              Jacob Barber
maintainer:          JacobA.Barber@yahoo.com
copyright:           2017 Jacob Barber
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     AST, AST.LambdaCalc, AST.Primitives, AST.Core,
                       AST.Alg, AST.Alg.Eval, AST.Alg.Simple
  build-depends:       base >= 4.7,
                       compdata >= 0.11
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jacoby6000/extensible-ast-poc
